Double bugfix for DB connection.
We avoid NPEs for non-DB files and the file URLs should be correct now.


git-svn-id: svn://svn.code.sf.net/p/toscanaj/code/trunk@860 267469b6-68fb-4578-8a4b-5844dc4013a7